# mocli

./: README.md  docker-compose.yaml  main.py  pyproject.toml
command/: command.py  execute.py  result.py  state.py
db_driver/: mongo_client.py
parser/: parse.py  parse_result.py
renderer/: render.py
tests/command/: test_execute.py
tests/db_driver/: test_mongo_client.py
tests/integration/: test_list_collections.py
tests/parser/: test_parsing.py
tests/renderer/: test_render_result.py
